[package]
name = "burve-solana-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "burve_solana_contract"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
spl-tlv-account-resolution = "0.6.5"
spl-transfer-hook-interface = "0.6.5"
spl-type-length-value = "0.4.6"
spl-pod = "0.2.5"
num-bigint = "0.4.5"
num-traits = "0.2.19"
solana-program = "1.18.17"

[dev-dependencies]
rand = "0.8.5"

[workspace]
resolver = "2"
